coomerPartyrippertest new URI instead of new URL